--- a/src/main/java/frontend/ButtonsPanel.form
+++ b/src/main/java/frontend/ButtonsPanel.form
@@ -56,7 +56,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="bfc4d" class="javax.swing.JButton" binding="extraButton" custom-create="true">
+      <component id="bfc4d" class="javax.swing.JButton" binding="extraButton">
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
