--- a/src/main/java/frontend/ButtonsPanel.form
+++ b/src/main/java/frontend/ButtonsPanel.form
@@ -46,11 +46,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="bfc4d" class="javax.swing.JButton" binding="extraButton">
+      <component id="bfc4d" class="javax.swing.JButton" binding="extraButton" custom-create="true">
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="true"/>
           <text value=""/>
         </properties>
       </component>
