--- a/src/main/java/frontend/NotationPanel.form
+++ b/src/main/java/frontend/NotationPanel.form
@@ -8,14 +8,14 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="86965">
+      <scrollpane id="86965" binding="scrollPane">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="31cd1" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="31cd1" class="javax.swing.JTable" binding="TrackerTable">
             <constraints/>
             <properties/>
           </component>
