--- a/src/main/java/frontend/GlobalParamatersPanel.form
+++ b/src/main/java/frontend/GlobalParamatersPanel.form
@@ -22,13 +22,11 @@
         </constraints>
         <properties/>
       </component>
-      <component id="b2df" class="javax.swing.JButton" binding="playButton" default-binding="true">
+      <component id="b2df" class="javax.swing.JButton" binding="playButton" custom-create="true" default-binding="true">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Play"/>
-        </properties>
+        <properties/>
       </component>
     </children>
   </grid>
