--- a/src/main/java/frontend/NotationPanel.form
+++ b/src/main/java/frontend/NotationPanel.form
@@ -21,47 +21,81 @@
           </component>
         </children>
       </scrollpane>
-      <component id="8c4db" class="javax.swing.JComboBox" binding="durBox">
+      <tabbedpane id="86ac" binding="tabbedPane1" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="52b2b" class="javax.swing.JButton" binding="delButton">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Delete Selected"/>
-          <toolTipText value="delete the chord selected in the Tracker Table"/>
-        </properties>
-      </component>
-      <grid id="a7700" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="114f" class="javax.swing.JButton" binding="shiftDownButton">
+          <grid id="847dd" binding="generalTab" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <tabbedpane title="General"/>
             </constraints>
-            <properties>
-              <text value="Shift Down"/>
-            </properties>
-          </component>
-          <component id="ed5b2" class="javax.swing.JButton" binding="shiftUpButton" default-binding="true">
+            <properties/>
+            <border type="none"/>
+            <children>
+              <grid id="a7700" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="114f" class="javax.swing.JButton" binding="shiftDownButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Shift Down"/>
+                    </properties>
+                  </component>
+                  <component id="ed5b2" class="javax.swing.JButton" binding="shiftUpButton" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Shift Up"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+              <component id="52b2b" class="javax.swing.JButton" binding="delButton">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Delete Selected"/>
+                  <toolTipText value="delete the chord selected in the Tracker Table"/>
+                </properties>
+              </component>
+              <component id="8c4db" class="javax.swing.JComboBox" binding="durBox">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
+          </grid>
+          <scrollpane id="b9713">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <tabbedpane title="Extensions"/>
             </constraints>
-            <properties>
-              <text value="Shift Up"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="bf34" class="javax.swing.JList" binding="extList">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
-      </grid>
+      </tabbedpane>
     </children>
   </grid>
 </form>
