--- a/src/main/java/frontend/GlobalParamatersPanel.form
+++ b/src/main/java/frontend/GlobalParamatersPanel.form
@@ -38,7 +38,7 @@
           <text value="Save"/>
         </properties>
       </component>
-      <component id="2f572" class="javax.swing.JButton" binding="midiExportButton" default-binding="true">
+      <component id="2f572" class="javax.swing.JButton" binding="midiExportButton" custom-create="true" default-binding="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
