--- a/src/main/java/frontend/GlobalParamatersPanel.form
+++ b/src/main/java/frontend/GlobalParamatersPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frontend.GlobalParametersPanel">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="428" height="227"/>
+      <xy x="20" y="20" width="529" height="227"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -44,6 +44,14 @@
         </constraints>
         <properties>
           <text value="Midi Export"/>
+        </properties>
+      </component>
+      <component id="1d6f8" class="javax.swing.JButton" binding="stopButton">
+        <constraints>
+          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="please stop oh god it hurts"/>
         </properties>
       </component>
     </children>
